--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -4,97 +4,73 @@
         "source": "~/.config/fastfetch/ascii.txt",
     },
     "modules": [
+    
         "break",
-        {
-            "type": "custom",
-            "format": "┌────────────────────── Hardware ──────────────────────┐"
-        },
+        
         {
             "type": "host",
-            "key": " PC",
+            "key": "",
         },
+        
         {
             "type": "cpu",
-            "key": "│ ├",
+            "key": "",
             "showPeCoreCount": true,
         },
+        
         {
             "type": "gpu",
-            "key": "│ ├󰍛",
+            "key": "󰍛",
         },
+        
         {
             "type": "memory",
-            "key": "│ ├󰍛",
+            "key": "󰍛",
         },
+        
         {
             "type": "disk",
-            "key": "└ └",
+            "key": "",
         },
-        {
-            "type": "custom",
-            "format": "└────────────────────────────────────────────────────┘"
-        },
+        
         "break",
-        {
-            "type": "custom",
-            "format": "┌────────────────────── Software──────────────────────┐"
-        },
+        
         {
             "type": "os",
-            "key": " OS",
+            "key": " ",
         },
+        
         {
             "type": "kernel",
-            "key": "│ ├",
+            "key": "",
         },
         {
             "type": "packages",
-            "key": "│ ├󰏖",
+            "key": "󰏖",
         },
+        
         {
             "type": "shell",
-            "key": "└ └",
+            "key": "",
         },
-        "break",
-        {
-            "type": "de",
-            "key": " DE",
-        },
+        
         {
             "type": "lm",
-            "key": "│ ├",
+            "key": "",
         },
+        
         {
             "type": "wm",
-            "key": "│ ├",
+            "key": "",
         },
-        {
-            "type": "wmtheme",
-            "key": "│ ├󰉼",
-        },
-        {
-            "type": "gpu",
-            "key": "└ └󰍛",
-            "format": "{3}",
-        },
-        {
-            "type": "custom",
-            "format": "└────────────────────────────────────────────────────┘"
-        },
+        
         "break",
-        {
-            "type": "custom",
-            "format": "┌──────────────────── Uptime ────────────────────┐"
-        },
+        
         {
             "type": "uptime",
             "key": "  Uptime ",
         },
-        {
-            "type": "custom",
-            "format": "└────────────────────────────────────────────────────┘"
-        },
+        
         "break",
     ]
 }
-
