Theme changes (forgor to upload here)

--- a/.config/DankMaterialShell/settings.json
+++ b/.config/DankMaterialShell/settings.json
@@ -1,5 +1,5 @@
 {
-  "currentThemeName": "pink",
+  "currentThemeName": "cyan",
   "customThemeFile": "",
   "matugenScheme": "scheme-tonal-spot",
   "runUserMatugenTemplates": true,
